# pdfer

./: .gitignore  LICENSE  README.md  pyproject.toml  vercel.json
backend/: date_utils.py  main.py  pdf_processor.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: PDFUpload.jsx
