[project]
name = "pdfer"
version = "0.1.0"
description = "Web-based PDF editor for replacing text in PDF documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.26.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.5",
]
